--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
+
+    <!--Google fonts-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+    <!--/Google fonts-->
+    
   </head>
   <body style="margin:0; padding:0; box-sizing:border-box;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
